icon added to indicate categories which only have a suggested genre

--- a/app/client/templates/admin/admin.html
+++ b/app/client/templates/admin/admin.html
@@ -113,6 +113,8 @@
     </div>
   </div>
 
+  <div class="genre-divider"></div>
+
   {{#each categories}}
     <div class="admin-filter grey square {{#if genreFilter name}}active{{/if}}" data-action="select-genre">
       <div class="all text">
