redirect on bad ids enabled in router

--- a/app/client/templates/shared/not_found/not_found.html
+++ b/app/client/templates/shared/not_found/not_found.html
@@ -1,3 +1,11 @@
 <template name="NotFound">
-  <h1>Not Found</h1>
+
+    <div class="contents">
+
+      <div class="title-message">404 - Sorry, I can't find that {{object}}</div>
+
+      <div class="subtitle-message">Click <a href="/">here</a> to navigate back to the App Market</div>
+
+    </div>
+
 </template>
