--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -26,7 +26,7 @@
 
             <a href="{{getZippedPath 'appMarketAuthor' 'authorId' author}}"><div class="app-author">{{authorName}}</div></a>
 
-            <div class="app-rating">{{> appRating ratings=ratings}}</div>
+            <div class="app-rating">{{> appRating ratings=ratings simple=true}}</div>
 
             <div class="install-price">
 
