bug fix to prevent mutation of selectors in genre queries. fixes #151

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -75,7 +75,7 @@
           <div class="left-float block-phone details-block">
 
             <div class="date">{{dateFormat createdAt 'MMMM DD, YYYY'}}</div>
-            <div class="genre">{{category}}</div>
+            <div class="genre">{{categories.[0]}}</div>
 
             <div class="divider"></div>
 
