--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -54,7 +54,7 @@
             <div class="left-float details-block">
 
               <div class="date">{{dateFormat createdAt 'MMMM DD, YYYY'}}</div>
-              <div class="genre">{{category}}</div>
+              <div class="genre">{{categories.[0]}}</div>
 
               <div class="divider"></div>
 
