fixed padding on new genre edit box

--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -392,7 +392,9 @@
     color: #555555;
   }
   &.input {
-    width: 10rem;
+    min-width: 10rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 
 }
