--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -198,7 +198,7 @@
 
     <input type="text" placeholder="Browse" readonly="true" data-field="filename" class="filename" data-action="choose-file" data-name="spk" value="{{filename}}" />
     <input type="file" class="file-picker" data-action="file-picker" data-for="spk" accept=".spk" />
-    <div class="square-button dark rem-space-float" data-action="upload-spk">Upload</div>
+    <div class="square-button dark rem-space-float" data-action="file-picker" data-for="spk">Upload</div>
 
     {{else}}
 
@@ -209,7 +209,7 @@
 
     <input type="text" placeholder="Browse" readonly="true" data-field="filename" class="filename" data-action="choose-file" data-name="spk" value="{{filename}}" />
     <input type="file" class="file-picker" data-action="file-picker" data-for="spk" accept=".spk" />
-    <div class="square-button dark rem-space-float" data-action="upload-spk">Upload</div>
+    <div class="square-button dark rem-space-float" data-action="file-picker" data-for="spk">Upload</div>
 
     {{/if}}
 
