--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -149,7 +149,7 @@
 
       <h3 class="title">Description</h3>
 
-      <textarea class="description" data-field="description" placeholder="What does your app do?">{{description}}</textarea>
+      {{> descriptionEditor initial=description}}
 
       <div class="spacer"></div>
 
