--- a/app/client/templates/review/review.scss
+++ b/app/client/templates/review/review.scss
@@ -52,6 +52,24 @@
     }
   }
 
+  .markdown-bar {
+    display: block;
+    text-align: right;
+    height: 2rem;
+    line-height: 2rem;
+    font-size: 1.3rem;
+    background-color: #e7e4ea;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-top: 1px solid #e7e4ea;
+    border-left: 1px solid #e7e4ea;
+    border-right: 1px solid #e7e4ea;
+    border-bottom: none;
+    a {
+      color: #444444;
+    }
+  }
+
 }
 
 .description-editor {
@@ -61,7 +79,10 @@
   display: block;
   box-shadow: none;
   background: #ffffff;
-  border: 1px solid #ccb8d1;
+  border-bottom: 1px solid #e7e4ea;
+  border-left: 1px solid #e7e4ea;
+  border-right: 1px solid #e7e4ea;
+  border-top: none;
   color: #555555;
   font-size: 1.95rem;
   font-family: $main-font;
