changed single app styling, consistent with #154

--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -20,8 +20,8 @@
       {{else}}
       <div class="message table" data-action="rate-app">
         <span>Be the first to rate</span>
-        <i class="icon-extra-thumbs-up"></i>
-        <i class="icon-extra-thumbs-down"></i>
+        <i class="icon-extra-thumbs-up purple"></i>
+        <i class="icon-extra-thumbs-down purple"></i>
       </div>
       {{/if}}
     {{else}}
@@ -29,8 +29,8 @@
         <div class="message" data-action="rate-app">
           Be the first to rate this app
         </div>
-        <i class="icon-extra-thumbs-up" data-action="rate-app"></i>
-        <i class="icon-extra-thumbs-down" data-action="rate-app"></i>
+        <i class="icon-extra-thumbs-up purple" data-action="rate-app"></i>
+        <i class="icon-extra-thumbs-down purple" data-action="rate-app"></i>
       {{else}}
         <i class="icon-extra-thumbs-up"></i>
         <div class="ratings">
