more css tweaks

--- a/app/client/templates/components/app-table.scss
+++ b/app/client/templates/components/app-table.scss
@@ -3,6 +3,7 @@
 .app-table, .app-table-large {
 
   margin-left: -$app-container-margin-lr;
+  margin-right: -$app-container-margin-lr;
   font-size: 0;
   display: block;
   clear: both;
