--- a/app/client/templates/components/app-item-full-width.scss
+++ b/app/client/templates/components/app-item-full-width.scss
@@ -96,6 +96,9 @@
         .app-author-full-width {
           clear: left;
           font-size: 1.7rem;
+          a {
+            color: #783189;
+          }
         }
 
       }
