--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -34,6 +34,10 @@
       margin-right: 5.66rem;
       height: 26.5rem;
 
+      @media (min-width: $large-phone) and (max-width: $small-tablet) {
+        height: 60vw;
+      }
+
       .image-surround-full-width {
 
         position: relative;
@@ -121,9 +125,9 @@
         .app-author-full-width {
           clear: left;
           font-size: 1.7rem;
-          // a {
-          //   color: #783189;
-          // }
+          a {
+            color: #783189;
+          }
         }
 
       }
