--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -3,11 +3,13 @@
   {{#if message}}
   <div class="welcome-message">
 
+    {{#if message}}
     <div class="message">
 
       <div class="text">{{message}}</div>
 
     </div>
+    {{/if}}
 
     <div class="close-button">
       <i class="icon-rejected_dark"></i>
