added oauth but no login option for connect buttons

--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -158,6 +158,10 @@ html {
   body {
     margin: 0;
     user-select: none;
+
+    &.serviceConfiguration {
+      user-select: initial;
+    }
   }
 
   a {
