--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -89,6 +89,8 @@
 
         {{> connectButton service="github"}}
         {{> connectButton service="google"}}
+        {{> connectButton service="facebook"}}
+        {{> connectButton service="twitter"}}
 
       </div>
 
