--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -656,4 +656,12 @@
     width: 30rem;
   }
 
+  pre {
+    white-space: pre-line;
+  }
+
+  .anti-modal-closer {
+    display: inline-block;
+  }
+
 }
