--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -247,7 +247,7 @@
 
       <h3 class="title">Description</h3>
 
-      {{> descriptionEditor initial=description}}
+      {{> descriptionEditor initial=description original=originalApp.htmlDescription}}
 
     </div>
 
@@ -287,13 +287,17 @@
 <template name="descriptionEditor">
 
   <div class="description-editor-container">
-    <div class="tab {{#unless viewOriginal}}active{{/unless}}" data-action="edit-markdown">Edit</div>
-    <div class="tab {{#if viewOriginal}}active{{/if}}" data-action="view-original">Preview</div>
+    <div class="tab {{#if view 'edit'}}active{{/if}}" data-view="edit">Edit</div>
+    <div class="tab {{#if view 'preview'}}active{{/if}}" data-view="preview">Preview</div>
+    {{#if original}}
+    <div class="tab {{#if view 'original'}}active{{/if}}" data-view="original">Original</div>
+    {{/if}}
     <div class="markdown-bar" data-tooltip-manual={{emptyDescriptionTooltip}} data-description-warning>
       <a href="https://help.github.com/articles/markdown-basics/" target="_blank">Markdown supported &gt;</a>
     </div>
-    <textarea class="description-editor {{#if viewOriginal}}hidden{{/if}}" data-field="description">{{current}}</textarea>
-    <div class="description-editor {{#unless viewOriginal}}hidden{{/unless}}" data-field="original">{{{original}}}</div>
+    <textarea class="description-editor {{#unless view 'edit'}}hidden{{/unless}}" data-field="edit">{{edit}}</textarea>
+    <div class="description-editor {{#unless view 'preview'}}hidden{{/unless}}" data-field="preview">{{{preview}}}</div>
+    <div class="description-editor {{#unless view 'original'}}hidden{{/unless}}" data-field="original">{{{original}}}</div>
   </div>
 
 </template>
