updated apps by me icon to differ from login icon.  fixes #130

--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -124,6 +124,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-extra-myapps_dark:before {
+	content: "\e604";
+}
 .icon-extra-l-angle:before {
 	content: "\e600";
 }
