--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -13,7 +13,7 @@
     </a>
 
     <a class="menu-link {{inRouteCategory 'appsByMe'}} {{#unless currentUser}}disabled{{/unless}}" href="{{#if currentUser}}{{getPath 'appsByMe'}}{{/if}}">
-      <i class="icon-my"></i>
+      <i class="icon-extra-myapps_dark"></i>
       <div class="menu-text">Apps by Me</div>
     </a>
 
